...
            android:layout_height="wrap_content"
            app:icon="@drawable/m3_split_button_chevron_avd" />
    </com.google.android.material.button.MaterialSplitButton>

    <com.google.android.material.button.MaterialButton
        style="?attr/materialButtonTonalStyle"
        android:id="@+id/open_map"
        android:text="@string/entrant_map_btn"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="4dp"/>
...
